--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "dependencies": {
     "crawler": "^0.4.3",
+    "es6-promise": "^3.0.2",
     "google-spreadsheet": "^1.0.1",
+    "isomorphic-fetch": "^2.2.0",
     "mongoose": "^4.2.5"
   },
   "devDependencies": {},
